fix: activity container overflow issue

--- a/src/components/Container/Activity/index.module.scss
+++ b/src/components/Container/Activity/index.module.scss
@@ -22,6 +22,7 @@
     overflow: auto;
     margin-left: 0.5rem;
     margin-right: 0.5rem;
+    max-width: fit-content;
   }
 
   &-tab-button--new-tab {
