--- a/src/components/Container/Controls/index.module.scss
+++ b/src/components/Container/Controls/index.module.scss
@@ -24,7 +24,7 @@
       align-items: center;
       width: 100%;
       height: 3rem;
-      background-color: $primary-surface4;
+      background-image: linear-gradient(45deg, $primary-surface3, $primary-surface4);
       padding: 0;
       backdrop-filter: blur(10px);
 
